# near-contract-template

./: .gitignore  README.md
contracts/computing/src/: lib.rs
contracts/greeting/: Cargo.toml
contracts/greeting/src/: lib.rs
dante-cross-chain-standards/: Cargo.toml
dante-cross-chain-standards/src/: core.rs  core_impl.rs  lib.rs  macros.rs  types.rs
examples/computing/: Cargo.toml
examples/computing/src/: lib.rs
examples/greeting/: Cargo.toml
examples/greeting/src/: lib.rs
examples/register/: registerToNear.js
project/: README.md
protocol_sdk/: Cargo.toml
protocol_sdk/src/: core_impl.rs  lib.rs  macros.rs  types.rs
register/: registerToNear.js
