[package]
name = "dante-cross-chain-standards"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
categories = ["wasm"]
description = """
DANTENETWORK cross chain contracts standard library.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.7"